--- a/maintenance/views/index.ejs
+++ b/maintenance/views/index.ejs
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NakamaStream - En Desarrollo</title>
+    <meta name="description" content="Bienvenido a NakamaStream actualmente la plataforma no se encuentra terminada">
+    <meta property="og:title" content="NakamaStream">
+    <meta property="og:description" content="Bienvenido a NakamaStream actualmente la plataforma no se encuentra terminada">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/168317328?s=200&v=4">
+    <meta property="og:url" content="https://nakamastream.lat/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="NakamaStream">
+    <meta name="twitter:description" content="Bienvenido a NakamaStream actualmente la plataforma no se encuentra terminada">
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/168317328?s=200&v=4">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <script>
@@ -40,7 +49,7 @@
             <div class="w-full max-w-md mx-auto progress-container bg-gray-100 rounded-lg p-4">
                 <p class="text-lg text-gray-700 mb-2">Progreso estimado:</p>
                 <div class="w-full bg-gray-200 rounded-full h-4">
-                    <div class="bg-custom-red h-4 rounded-full" style="width: 85%"></div>
+                    <div class="bg-custom-red h-4 rounded-full" style="width: 98%"></div>
                 </div>
             </div>
             <!-- Nueva sección para el enlace de Discord -->
